--- a/addLocationitem.html
+++ b/addLocationitem.html
@@ -49,19 +49,19 @@
                                         <input type="password" placeholder="Password">
                                         <h3>Product Image</h3>
                                         <h5>Image will be displayed as cover image</h5>
+                                        <div class="upload-button">
+                                            <img src="./assets/icons/uploadGallery.svg" alt="" class="gallery-icon">
+                                            <span class="upload-text">Upload</span>
+                                            <input type="file">
+                                        </div>
+                                        <h3>Product Description(Optional)</h3>
+                                        <input type="text" placeholder="Description">
+                                        <button class="save-product-btn">Save Product</button>
                                     </div>
-                                    <label class="upload-button">
-                                        <img src="./assets/icons/uploadGallery.svg" alt="" class="gallery-icon">
-                                        <span class="upload-text">Upload</span>
-                                        <input type="file">
-                                      </label>
+<!--                                     
                                     <div class="container-login">
-                                        <button class="btn-login">Login</button>
-                                        <button class="btn-login-gmail"><img src="./assets/icons/google.svg"
-                                                alt=""><span>Login with
-                                                Google</span></button>
-                                        <p>New to Locator? <a href="#">Create New Account</a></p>
-                                    </div>
+                                        <button class="btn-login">Save Product</button>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
