Dashboard Setting Page

--- a/AddBusinessLocation.html
+++ b/AddBusinessLocation.html
@@ -50,7 +50,7 @@
             </div>
             <div class="main-rightbar-addBusinessLocation-container">
                 <h2>Add Your Business</h2>
-                <div class="asd">
+                <div class="main-addBusinessLocation-container-gaint">
                     <div class="main-addBusinessLocation-container">
                         <input type="text" placeholder="Business Name">
                         <input type="text" placeholder="Business Address">
