profile Location Page Complete

--- a/Profile_location.html
+++ b/Profile_location.html
@@ -267,22 +267,75 @@
                                     </div>
                                 </div>
 
-                                <div class="">
-                                    <div class="">
-                                        <img src="./assets/img/review.png" alt="">
-                                    </div>
-                                    <div class="">
-                                        <h3>John Doe</h3>
-                                        <h5>johndoe@gmail.com</h5>
-                                        <p>This is definitely the hearth and would of the city! If you are in New York,
-                                            you have to go to Times Square, no doubts about it 😍</p>
-                                        <div class="">
-                                            <img src="./assets/img/Rectangle 7 (1).png" alt="">
-                                            <img src="./assets/img/Rectangle 7.png" alt="">
-                                            <img src="./assets/img/Rectangle 8 (1).png" alt="">
+                                <div class="profile-location-user-conatiner">
+                                    <div class="profile-location-user-inner-conatiner">
+                                        <div class="profile-location-user-img-conatiner">
+                                            <img src="./assets/img/review.png" alt="">
+                                        </div>
+                                        <div class="profile-location-user-detail-container">
+                                            <h3>John Doe</h3>
+                                            <h5>Local Guide</h5>
+                                            <img src="./assets/icons/verified-icon.svg" alt="" class="profile-location-user-verified-icon">
+                                            <div
+                                                class="profile-location-reviews-star-innerSection profile-location-user-detail-star-container">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star-half.svg" alt="">
+                                                <img src="./assets/icons/star-empty.svg" alt="">
+                                                <span>6 week ago</span>
+                                            </div>
                                         </div>
                                     </div>
+                                    <p>This is definitely the hearth and would of the city! If you are in New York,
+                                        you have to go to Times Square, no doubts about it 😍</p>
+                                    <div class="profile-location-user-detail-img-container">
+                                        <img src="./assets/img/Rectangle 7 (1).png" alt="">
+                                        <img src="./assets/img/Rectangle 7.png" alt="">
+                                        <img src="./assets/img/Rectangle 8 (1).png" alt="">
+                                    </div>
+                                    <div class="profile-location-user-like-span-container">
+                                        <span>
+                                            <img src="./assets/icons/like-black.svg" alt="">
+                                            <p>134</p>
+                                        </span>
+                                    </div>
                                 </div>
+                                <div class="profile-location-user-conatiner">
+                                    <div class="profile-location-user-inner-conatiner">
+                                        <div class="profile-location-user-img-conatiner">
+                                            <img src="./assets/img/review.png" alt="">
+                                        </div>
+                                        <div class="profile-location-user-detail-container">
+                                            <h3>John Doe</h3>
+                                            <h5>Local Guide</h5>
+                                            <img src="./assets/icons/verified-icon.svg" alt="" class="profile-location-user-verified-icon">
+                                            <div
+                                                class="profile-location-reviews-star-innerSection profile-location-user-detail-star-container">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star.svg" alt="">
+                                                <img src="./assets/icons/star-half.svg" alt="">
+                                                <img src="./assets/icons/star-empty.svg" alt="">
+                                                <span>6 week ago</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>This is definitely the hearth and would of the city! If you are in New York,
+                                        you have to go to Times Square, no doubts about it 😍</p>
+                                    <div class="profile-location-user-detail-img-container">
+                                        <img src="./assets/img/Rectangle 7 (1).png" alt="">
+                                        <img src="./assets/img/Rectangle 7.png" alt="">
+                                        <img src="./assets/img/Rectangle 8 (1).png" alt="">
+                                    </div>
+                                    <div class="profile-location-user-like-span-container">
+                                        <span>
+                                            <img src="./assets/icons/like-black.svg" alt="">
+                                            <p>134</p>
+                                        </span>
+                                    </div>
+                                </div>
+                                
 
                             </div>
                             <div id="Portfolio" class="tabcontent">
