--- a/dasboardSettings.html
+++ b/dasboardSettings.html
@@ -116,7 +116,8 @@
                     </li>
                 </ul>
                 <h2>Marker Size</h2>
-                <button class="statsPage-next-btn Submit-Business-Location-btn">Save Settings<img src="./assets/icons/right-arrow.svg" alt=""></button>
+                <button class="statsPage-next-btn Submit-Business-Location-btn">Save Settings<img
+                        src="./assets/icons/right-arrow.svg" alt=""></button>
             </div>
         </div>
     </div>
