--- a/Comparison_States.html
+++ b/Comparison_States.html
@@ -60,7 +60,9 @@
                 <div class="ComparisonStates-rating-detail-container">
                     <div class="ComparisonStates-rating-detail-box">
                         <h3>Ratings</h3> 
-                        <div class="ComparisonStates-halfRing-container"></div>
+                        <!-- <div class="ComparisonStates-halfRing-container"></div> -->
+                        <!-- <div class="half-circle"></div> -->
+                        
                     </div>
                     <div class="ComparisonStates-rating-detail-box">
                         <div class="ComparisonStates-totolCustomers-detail">
