--- a/addLocationitem.html
+++ b/addLocationitem.html
@@ -56,7 +56,7 @@
                                         </div>
                                         <h3>Product Description(Optional)</h3>
                                         <input type="text" placeholder="Description">
-                                        <button class="save-product-btn">Save Product</button>
+                                        <a href="addLocationItem2.html" class="save-product-btn">Save Product</a>
                                     </div>
 <!--                                     
                                     <div class="container-login">
