--- a/states.html
+++ b/states.html
@@ -14,34 +14,50 @@
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
                 <ul>
-                    <li>
-                        <img src="./assets/icons/home.svg" alt="">
-                        <p>Home</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/search.svg" alt="">
-                        <p>Search</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Saved</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/stats.svg" alt="">
-                        <p>Statistics</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Preferences</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/addLocation.svg" alt="">
-                        <p>Add Location</p>
-                    </li>
+                    <a href="Home_Collapsed.html">
+                        <li>
+                            <img src="./assets/icons/home.svg" alt="">
+                            <p>Home</p>
+                        </li>
+                    </a>
+                    <a href="Profile_location.html">
+                        <li>
+                            <img src="./assets/icons/search.svg" alt="">
+                            <p>Search</p>
+                        </li>
+                    </a>
+                    <a href="user_saved.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Saved</p>
+                        </li>
+                    </a>
+                    <a href="states.html">
+                        <li>
+                            <img src="./assets/icons/stats.svg" alt="">
+                            <p>Statistics</p>
+                        </li>
+                    </a>
+
+                    <a href="dasboardSettings.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Preferences</p>
+                        </li>
+                    </a>
+
+                    <a href="AddBusinessLocation.html">
+                        <li>
+                            <img src="./assets/icons/addLocation.svg" alt="">
+                            <p>Add Location</p>
+                        </li>
+                    </a>
                 </ul>
                 <div class="userDone-login-container">
-                    <img src="./assets/img/user-login.jpg" alt="">
-                    <span class="user-span-name">John Doe</span>
+                    <a href="user_profile.html">
+                        <img src="./assets/img/user-login.jpg" alt="">
+                        <span class="user-span-name">John Doe</span>
+                    </a>
                 </div>
                 <button class="sidebar-logout-btn">
                     <img src="./assets/icons/logout.svg" alt=""><br>
@@ -119,7 +135,7 @@
                         </div>
                     </a>
                 </div>
-                <button class="statsPage-next-btn">Next<img src="./assets/icons/right-arrow.svg" alt=""></button>
+                <a href="states_selected.html" class="statsPage-next-btn">Next<img src="./assets/icons/right-arrow.svg" alt=""></a>
             </div>
         </div>
     </div>
