--- a/Home_Collapsed.html
+++ b/Home_Collapsed.html
@@ -18,60 +18,55 @@
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
                 <ul>
-                    <li>
-                        <img src="./assets/icons/home.svg" alt="">
-                        <p>Home</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/search.svg" alt="">
-                        <p>Search</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Saved</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/stats.svg" alt="">
-                        <p>Statistics</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Preferences</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/addLocation.svg" alt="">
-                        <p>Add Location</p>
-                    </li>
-                </ul>
-                <button class="sidebar-login-btn">
-                    <img src="./assets/icons/user-login.svg" alt="">
-                    <span id="loginButton">Login</span>
+                    <a href="Home_Collapsed.html">
+                        <li>
+                            <img src="./assets/icons/home.svg" alt="">
+                            <p>Home</p>
+                        </li>
+                    </a>
+                    <a href="Profile_location.html">
+                        <li>
+                            <img src="./assets/icons/search.svg" alt="">
+                            <p>Search</p>
+                        </li>
+                    </a>
+                    <a href="user_saved.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Saved</p>
+                        </li>
+                    </a>
+                    <a href="states.html">
+                        <li>
+                            <img src="./assets/icons/stats.svg" alt="">
+                            <p>Statistics</p>
+                        </li>
+                    </a>
 
-                </button>
-                <div id="container" class="main-login-container hidden">
-                    <img src="./assets/icons/cross.svg" class="login-cross" alt="">
-                    <div class="login-container">
-                        <div class="login-section-center">
-                            <div class="login-brand-logo-container">
-                                <img src="./assets/logo.svg" alt="">
-                                <h2>Locator</h2>
-                            </div>
-                            <h3>Welcome Back!</h3>
-                            <h4>Login to your Account</h4>
-                            <div class="login-input-container">
-                                <input type="text" placeholder="Email Address">
-                                <input type="password" placeholder="Password">
-                            </div>
-                            <div class="container-login">
-                                <button class="btn-login">Login</button>
-                                <button class="btn-login-gmail"><img src="./assets/icons/google.svg" alt=""><span>Login
-                                        with
-                                        Google</span></button>
-                                <p>New to Locator? <a href="#">Create New Account</a></p>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="dasboardSettings.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Preferences</p>
+                        </li>
+                    </a>
+
+                    <a href="AddBusinessLocation.html">
+                        <li>
+                            <img src="./assets/icons/addLocation.svg" alt="">
+                            <p>Add Location</p>
+                        </li>
+                    </a>
+                </ul>
+                <div class="userDone-login-container">
+                    <a href="user_profile.html">
+                        <img src="./assets/img/user-login.jpg" alt="">
+                        <span class="user-span-name">John Doe</span>
+                    </a>
                 </div>
+                <button class="sidebar-logout-btn">
+                    <img src="./assets/icons/logout.svg" alt=""><br>
+                    <span id="loginButton">Logout</span>
+                </button>
             </div>
             <!-- Search Filter container -->
             <div class="main-Home-Collapsed-searchFilter-container">
