--- a/Profile_location.html
+++ b/Profile_location.html
@@ -18,36 +18,49 @@
             <div class="main-leftbar-container">
                 <img src="./assets/logo.svg" alt="">
                 <ul>
-                    <li>
-                        <img src="./assets/icons/home.svg" alt="">
-                        <p>Home</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/search.svg" alt="">
-                        <p>Search</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Saved</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/stats.svg" alt="">
-                        <p>Statistics</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/saved.svg" alt="">
-                        <p>Preferences</p>
-                    </li>
-                    <li>
-                        <img src="./assets/icons/addLocation.svg" alt="">
-                        <p>Add Location</p>
-                    </li>
+                    <a href="Home_Collapsed.html">
+                        <li>
+                            <img src="./assets/icons/home.svg" alt="">
+                            <p>Home</p>
+                        </li>
+                    </a>
+                    <a href="Profile_location.html">
+                        <li>
+                            <img src="./assets/icons/search.svg" alt="">
+                            <p>Search</p>
+                        </li>
+                    </a>
+                    <a href="user_saved.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Saved</p>
+                        </li>
+                    </a>
+                    <a href="states.html">
+                        <li>
+                            <img src="./assets/icons/stats.svg" alt="">
+                            <p>Statistics</p>
+                        </li>
+                    </a>
+
+                    <a href="dasboardSettings.html">
+                        <li>
+                            <img src="./assets/icons/saved.svg" alt="">
+                            <p>Preferences</p>
+                        </li>
+                    </a>
+
+                    <a href="AddBusinessLocation.html">
+                        <li>
+                            <img src="./assets/icons/addLocation.svg" alt="">
+                            <p>Add Location</p>
+                        </li>
+                    </a>
                 </ul>
-                <button class="sidebar-login-btn">
+                <a href="login.html" class="sidebar-login-btn">
                     <img src="./assets/icons/user-login.svg" alt="">
                     <span id="loginButton">Login</span>
-
-                </button>
+                </a>
                 <div id="container" class="main-login-container hidden">
                     <img src="./assets/icons/cross.svg" class="login-cross" alt="">
                     <div class="login-container">
