--- a/addLocationItem2.html
+++ b/addLocationItem2.html
@@ -43,9 +43,9 @@
                                 <div class="addLocation-item-section-center-2">
                                     <div class="addNewItem-2-top-container">
                                         <h2>Your Products</h2>
-                                        <button class="addLocationNewItem-btn"><img
+                                        <a href="addLocationProducts.html" class="addLocationNewItem-btn"><img
                                                 src="./assets/icons/plus-addLocation-btn.svg" alt="">Add New
-                                            Item</button>
+                                            Item</a>
                                     </div>
                                     <div class="addNewItem-box-container">
                                         <div class="addNewItem-box">
@@ -110,23 +110,7 @@
                                         </div>
                                     </div>
                                     <a href="#" class="addNewItem-viewAll-a">View All</a>
-                                    <!-- <h2>Add New Product</h2>
-                                    <div class="addLocation-item-input-container">
-                                        <h3>Product Name</h3>
-                                        <input type="text" placeholder="Email Address">
-                                        <h3>Price (USD)</h3>
-                                        <input type="password" placeholder="Password">
-                                        <h3>Product Image</h3>
-                                        <h5>Image will be displayed as cover image</h5>
-                                        <div class="upload-button">
-                                            <img src="./assets/icons/uploadGallery.svg" alt="" class="gallery-icon">
-                                            <span class="upload-text">Upload</span>
-                                            <input type="file">
-                                        </div>
-                                        <h3>Product Description(Optional)</h3>
-                                        <input type="text" placeholder="Description">
-                                        <button class="save-product-btn">Save Product</button>
-                                    </div> -->
+                                    
                                 </div>
                             </div>
                         </div>
@@ -162,8 +146,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
     <!-- Scripts -->
